add flight number

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
     <div class="card">
       <div class="title">Flights — 航班與轉機</div>
       <ul>
-        <li><span class="badge">去程</span> 菲律賓航空 PR895（商務艙）
-          <br>21:35 TPE 台北桃園 → 00:10+1 MNL 馬尼拉
+        <li><span class="badge">去程</span> 菲律賓航空 商務艙）
+          <br>PR895 → 21:35 TPE 台北桃園 → 00:10+1 MNL 馬尼拉
         </li>
         <li>轉機：6 小時 40 分（Mabuhay Lounge，24hr、淋浴、可休息）</li>
-        <li>接續航段：PRxxx → 06:50 MNL 馬尼拉 → 10:45 KUL 吉隆坡國際</li>
+        <li>接續航段：PR525 → 06:50 MNL 馬尼拉 → 10:45 KUL 吉隆坡國際</li>
       </ul>
       <ul>
-        <li><span class="badge">回程</span> 菲律賓航空 PR526（商務艙）
-          <br>11:45 KUL 吉隆坡國際 → 15:30 MNL 馬尼拉
+        <li><span class="badge">回程</span> 菲律賓航空 商務艙）
+          <br>PR526 → 11:45 KUL 吉隆坡國際 → 15:30 MNL 馬尼拉
         </li>
         <li>轉機：2 小時 45 分（Mabuhay Lounge，24hr、淋浴、可休息）</li>
-        <li>接續航段：PRxxx → 18:15 MNL 馬尼拉 → 20:35 TPE 台北桃園</li>
+        <li>接續航段：PR894 → 18:15 MNL 馬尼拉 → 20:35 TPE 台北桃園</li>
       </ul>
-      <p class="small muted">備註：請依你的實際訂位代號確認 MNL 接續班號（此處以 PRxxx 佔位）。轉機時段跨午夜，注意日期+1。</p>
+      <p class="small muted">備註：轉機時段跨午夜，注意日期+1。</p>
     </div>
 
     <div class="grid">
